Added secrets from external environment variables to config file

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Secrets": {
+    "BrevoAPIKey": "",
+    "JWTSymKeySecret": ""
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=SQLLiteDatabase.db"
   },
