--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,10 +14,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./Frontend
+    
     steps:
     - uses: actions/checkout@v4
-      with: 
-        path: "/Backend"
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
