Set working directory for dotnet restore and build
Specify working directory for restore and build steps.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,8 +26,10 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: ./Backend
     - name: Build
       run: dotnet build --no-restore
+      working-directory: ./Backend
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Set up Tailscale connection
