--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -47,4 +47,4 @@ jobs:
           # Add server to known_hosts (replace with your server`s IP or hostname)
           ssh-keyscan -H ${{ secrets.TS_BACKEND_IP }} >> ~/.ssh/known_hosts
     - name: Test SSH connection
-      run: ssh -i ~/.ssh/id_ed25519 user@your.server.ip "echo Connected successfully!"
+      run: ssh -i ~/.ssh/id_ed25519 ${{ secrets.REMOTE_USER }}@${{ secrets.TS_BACKEND_IP }} "echo Connected successfully!"
