--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>47f2f720-0c63-4b62-af00-7e20432b7c7c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <RuntimeIdentifier>win-x64;linux-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +23,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  
+  
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
