--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -12,19 +12,19 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["back.csproj", "."]
-RUN dotnet restore "./back.csproj"
+COPY ["Backend.csproj", "."]
+RUN dotnet restore "./Backend.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "./back.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./Backend.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./back.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Backend.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "back.dll"]
+ENTRYPOINT ["dotnet", "Backend.dll"]
