--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -40,7 +40,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H ${{ secrets.TS_BACKEND_IP }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.TS_FRONTEND_IP }} >> ~/.ssh/known_hosts
     - name: Test SSH connection
       run: |
         ssh -i ~/.ssh/id_ed25519 ${{ secrets.REMOTE_USER }}@${{ secrets.TS_FRONTEND_IP }} "echo Connected successfully!"
