Changed backend settings file, and fixed frontend url config

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -4,7 +4,7 @@
     "JWTSymKeySecret": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SQLLiteDatabase.db"
+    "DefaultConnection": "Data Source=SQLiteDatabase.db"
   },
     "Logging": {
       "LogLevel": {
