--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -1,6 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
+      "Microsoft.AspNetCore.Authentication": "Debug",
+      "Microsoft.IdentityModel": "Debug",
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
