Fixed issues with listing creation, added categories to most areas

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -12,5 +12,20 @@
         "Microsoft.AspNetCore": "Warning"
       }
     },
-    "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Currencies": [
+    "USD",
+    "EUR",
+    "GBP"
+  ]
+  //"Categories": [
+  //  {
+  //    "Category": "Gaming",
+  //    "Id": 0
+  //  },
+  //  {
+  //    "Category": "Electronics",
+  //    "id": 1
+  //  }
+  //]
 }
