--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^10.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "@uidotdev/usehooks": "^2.4.1",
     "jwt-decode": "^4.0.0",
